# B2B-task

./: .env.template  Dockerfile  Readme.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  runserver.sh
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/services/: __init__.py  transaction_service.py
b2b_wallet_project/: asgi.py  settings.py  urls.py  wsgi.py
test/: test_transaction.py
